<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="32dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_name_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    tools:text="Rick Martinez"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_gender"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/text_gender_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gender"
                    android:inputType="none"
                    tools:text="Masculino"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_origin"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_gender">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/text_origin_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/origin"
                    android:inputType="none"
                    tools:text="Planeta Origen" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_origin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_image_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/image"
                    tools:text="http://imagehost.com/here.png"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_cancel_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_image"
                app:layout_constraintVertical_bias="1"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintEnd_toStartOf="@id/edit_save"
                android:layout_marginEnd="8dp"
                android:text="Back"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/edit_cancel_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_image"
                app:layout_constraintVertical_bias="1"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="Save"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>